mass reformat root directory